--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,10 +6,13 @@ on:
 jobs:
   test:
     name: test
-    runs-on: [self-hosted]
-
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          node-version: 16
+          cache: npm
       - name: Test input
         uses: ./.github/actions/test-input
