--- a/.github/actions/test-input/action.yml
+++ b/.github/actions/test-input/action.yml
@@ -7,7 +7,7 @@ inputs:
     default: 'foobar'
 
 runs:
-  using: 'composite'
+  using: 'node16'
   steps:
     - name: Log input val
       uses: actions/github-script@v6
