Revert "try using "node16""
This reverts commit 0963b2096c07489499ef4a22bb76ba9e44d17722.

--- a/.github/actions/test-input/action.yml
+++ b/.github/actions/test-input/action.yml
@@ -7,7 +7,7 @@ inputs:
     default: 'foobar'
 
 runs:
-  using: 'node16'
+  using: 'composite'
   steps:
     - name: Log input val
       uses: actions/github-script@v6
