--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,4 +11,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Test input
+        id: my_test
         uses: ./.github/actions/test-input
+      - name: Log Test Output
+        run: |
+          echo "My Output: ${{ steps.my_test.outputs.my_output }}"
